--- a/event_pfe/views/event_site_views.xml
+++ b/event_pfe/views/event_site_views.xml
@@ -14,6 +14,8 @@
                         <field name="name" />
                         <field name="capacity" />
                         <field name="image" />
+                        <field name="adress" />
+
                     </group>
                 </sheet>
             </form>
