--- a/event_pfe/views/event_menus_view.xml
+++ b/event_pfe/views/event_menus_view.xml
@@ -1,7 +1,12 @@
 <odoo>
-    <menuitem id="evnt_menu_root" name="Event Site">
+    <menuitem id="event_menu_root" name="Event Sites" parent="event.event_main_menu">
         <menuitem id="event_site_first_level_menu" name="Adv">
             <menuitem id="event_site_menu_action" action="event_site_action" />
         </menuitem>
     </menuitem>
+    <!-- <menuitem name="Events"
+        id="menu_event_site"
+        sequence="30"
+        parent="event.event_main_menu"
+        groups="event.group_event_registration_desk" /> -->
 </odoo>
