--- a/event_pfe/views/event_site_views.xml
+++ b/event_pfe/views/event_site_views.xml
@@ -11,24 +11,24 @@
             <form>
                 <header>
                     <button name="action_confirm"
-                            type="object"
-                            string="Confirm"
-                            class="oe_highlight"
-                            attrs="{'invisible':[('state','=','confirmed')]}"/>
+                        type="object"
+                        string="Confirm"
+                        class="oe_highlight"
+                        attrs="{'invisible':[('state','=','confirmed')]}" />
                     <button name="action_draft"
-                            type="object"
-                            string="Cancel"
-                            attrs="{'invisible':[('state','=','draft')]}"/>
+                        type="object"
+                        string="Cancel"
+                        attrs="{'invisible':[('state','=','draft')]}" />
                     <field name="state"
-                           widget="statusbar"/>
+                        widget="statusbar" />
                 </header>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="capacity"/>
+                        <field name="name" />
+                        <field name="capacity" />
                         <field name="image"
-                               attrs="{'readonly': [('state', '=', 'confirmed')]}"/>
-                        <field name="address"/>
+                            attrs="{'readonly': [('state', '=', 'confirmed')]}" />
+                        <field name="address" />
                     </group>
                     <notebook>
                         <page string="Section de Places">
@@ -52,6 +52,20 @@
                 <field name="capacity" />
             </tree>
         </field>
+    </record>
+
+
+    <record id="event_type_ticket_view_tree_from_type_section_place" model="ir.ui.view">
+        <field name="name">event.ticket.section.place.tree</field>
+        <field name="model">event.event.ticket</field>
+        <field name="inherit_id" ref="event_sale.event_event_ticket_view_tree_from_event" />
+        <field name="arch" type="xml">
+            <field name="price" position="after">
+                <field name="section_id" />
+            </field>
+        </field>
+
+
     </record>
 
 
