--- a/event_pfe/static/src/css/style.css
+++ b/event_pfe/static/src/css/style.css
@@ -1,117 +1,63 @@
-
 body {
-    background-color: black;
-}
+  font-family: Arial, sans-serif;
+  }
 
-.mapsvg {
-    fill: rgb(213, 213, 213);
-    stroke-width: 1.13787px;
-}
-#registration_form {
-    background-color: pink !important;
-    /* Add more custom styles as needed */
-}
-.st0 {
-    fill: #999999;
-}
 
-.st1 {
-    enable-background: new;
-}
+  svg {
+  width: 100%;
+  height: auto;
+  }
 
-svg {
-    transform: scale(1);
-    height: 700px;
-    width: 900px;
-}
+  .mapsvg {
+  fill: #ebebeb;
+  transition: fill 0.3s;
+  }
 
-path:hover {
-    stroke: rgb(76, 76, 76);
-}
+  .mapsvg:hover {
+  fill: #ccc;
+  }
 
-.SVG-Container {
-    height: 700px;
-    width: 900px;
-    border: 10px;
-    border-radius: 50px;
-    background-color: rgb(239, 236, 236);
-    float: right;
-    position: static;
-    margin-top: 15px;
-}
+  .stadium-container {
+  position: relative;
+  }
 
-.popup {
+  .popup {
+    display: none;
     position: absolute;
-    top: 50px;
-    left: -300px;
-    /* Initially hide the popup bar outside the page */
-    width: 200px;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #fff;
-    border: 1px solid #000;
-    /* padding: 20px;*/
-    transition: all 0.5s ease-in-out;
-    display: inline;
-}
-
-.popup.active {
-    left: 0;
-    /* Move the popup bar to the left when it's active */
-}
-    body {
-    background-color: black;
-        }
-
-.mapsvg {
-    fill: rgb(213, 213, 213);
-    stroke-width: 1.13787px;
-}
-
-.st0 {
-    fill: #999999;
-}
-
-.st1 {
-    enable-background: new;
-}
-
-svg {
-    transform: scale(1);
-    height: 700px;
-    width: 900px;
-}
-
-path:hover {
-    stroke: rgb(76, 76, 76);
-}
-
-.SVG-Container {
-    height: 700px;
-    width: 900px;
-    border: 10px;
-    border-radius: 50px;
-    background-color: rgb(239, 236, 236);
-    float: right;
-    position: static;
-    margin-top: 15px;
-}
-
-.popup {
+    padding: 20px;
+    /* Other popup styles */
+  }
+  
+  .close-btn {
     position: absolute;
-    top: 50px;
-    left: -300px;
-    /* Initially hide the popup bar outside the page */
-    width: 200px;
-    height: 100%;
-    background-color: #fff;
-    border: 1px solid #000;
-    /* padding: 20px;*/
-    transition: all 0.5s ease-in-out;
-    display: inline;
-}
+    top: 10px;
+    right: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+  }
+  
+  .close-btn:hover {
+    color: red;
+  }
 
-.popup.active {
-    left: 0;
-    /* Move the popup bar to the left when it's active */
+  .btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  align-self: flex-end;
+  }
 
-}
+  .btn:hover {
+  background-color: #0056b3;
+  }
