--- a/event_pfe/views/website_event_update.xml
+++ b/event_pfe/views/website_event_update.xml
@@ -7,32 +7,43 @@
                 <attribute name="style">display:none;</attribute>
 
             </xpath>
-
             <xpath
                 expr="//div[@class='d-flex align-items-center py-2 pl-3 pr-2 border-bottom']">
-
                 <t t-call="event_pfe.svg_map"></t>
-
-
             </xpath>
             <xpath expr="//div[@id='o_wevent_tickets_collapse']" position="attributes">
                 <attribute name="style">display:none;</attribute>
             </xpath>
+            <xpath expr="//div[@class='row p-2 pl-3']" position="attributes">
+                <attribute name="style">display:none</attribute>
+            </xpath>
+            <xpath expr="//div[@class='row p-2 pl-3']" position="after">
 
+                <t t-call="event_pfe.svg_map" />
+
+
+            </xpath>
         </template>
         <template id="svg_map">
+
             <t t-set="svg" t-value="event.event_site_id.website_get_svg()"></t>
-            <div style="height:100%;width:100%;">
+            <div style="height:100%;width:100%;" class="stadium-container">
                 <t t-raw="svg"></t>
             </div>
             <t t-foreach="tickets" t-as="ticket">
-                <div style="height:300px;width:300px;">
-                    <!-- <img t-attf-src="{{image_data_uri(ticket.section_id.image)}}" />
-                    <img t-att="['src', 'ticket.section_id.image']" /> -->
-                    <t t-raw="ticket.section_id.code_section"></t>
+                <t t-set="code" t-value="ticket.section_id.code_section"></t>
+                <t t-set="section" t-value="ticket.section_id" />
+                <div t-att-id="code" class="popup">
+
+                    <button class="close-btn">&#215;</button>
+                    <p>Date: June 5, 2023</p>
+                    <p>Time: 8:00 AM</p>
+                    <p t-out="ticket.price">Ticket Price: 50DA</p>
+                    <p>Available Seats: 10</p>
+                    <button class="btn">Buy Ticket</button>
+
                 </div>
             </t>
-
         </template>
 
     </data>
@@ -40,6 +51,11 @@
 </odoo>
 
 
+<!-- <img t-attf-src="{{image_data_uri(ticket.section_id.image)}}" />
+                    <img t-att="['src', 'ticket.section_id.image']" /> -->
+
+<!-- <img t-attf-src="{{image_data_uri(section.image)}}"
+                            style="height:50%;width:100%;left: 0;top: 50px;" /> -->
 <!-- <html>
                     <head>
                         <style>
