--- a/event_pfe/static/src/css/style.css
+++ b/event_pfe/static/src/css/style.css
@@ -19,46 +19,40 @@ body {
 
   .stadium-container {
   position: relative;
-  padding-left: 400px;
+  margin-left: 1rem;
+
   }
 
   .popup {
     display: block;
-    position: absolute;
-    width:400px;
+    width:100%;
     height: 808px;
     left: 0;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-out;
+
     background-color: #ebebeb;
     align-content: center;
     text-align: center;
     background-color: #f8f8f8;
     border: 1px solid #ccc;
     padding: 20px;
+    overflow-y: scroll;
     text-align: center;
+    z-index: 3;
     /* padding: 20px; */
     /* Other popup styles */
+  }
+
+  .popup_holder{
+    width: 477px;
+    min-height: 808px;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
   }
   
   .show {
     transform: translateX(0%);
   }
   
-  /* .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-  }
-   */
-  /* .close-btn:hover {
-    color: red;
-  } */
 
   .btn {
   background-color: #007bff;
@@ -77,23 +71,23 @@ body {
 
   .container{
     padding-top: 2px;
-    max-width: 100%;
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-left: 0px;
-    padding-right:0px
+    min-width: 100%;
+
   }
 
   .ticket-header {
-    background-color: #4caf50;
+    background-color: #301f9c;
     color: #fff;
     padding: 10px;
     margin-bottom: 20px;
 }
 
 .ticket-header h2 {
-    margin: 0;
     font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .close-btn {
@@ -111,8 +105,8 @@ body {
 img {
     display: block;
     margin: 0 auto;
-    max-height: 300px;
-    width: 360px;
+    max-height: 200px;
+    width: 320px;
     margin-bottom: 20px;
 }
 
@@ -143,7 +137,7 @@ img {
     margin-top: 10px;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #4caf50;
+    background-color: #301f9c;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -160,11 +154,56 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height:fit-content;
+
+}
+.svg-popup-container{
+  display: flex;
+}
+.everything-container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .ticket_item_iterator {
-  display: none;
+  display: block;
 }
 
 /* ticket item card styles */
-/* .ticket_item {} */
+ .ticket_item {
+  display:none;
+  margin-bottom: 20px;
+  position: relative;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+ } 
+
+::-webkit-scrollbar {
+  width: 10px; /* Adjust the width of the scroll bar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background color of the scroll bar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scroll bar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scroll bar thumb on hover */
+}
+
+#main_registration{
+  align-self: start;
+    width: 309px;
+    border: black 1px solid;
+    margin-left: 3rem;
+    height: 3rem;
+    margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
+}
+}
